[package]
name = "dropbox"
version = "0.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.14", features = [ "json" ], default-features = false }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.39"

[dev-dependencies]
tokio = { version = "*", features = [ "macros" ]}

[features]
default = [
    "native-tls"
]
native-tls = [
    "reqwest/native-tls"
]
rustls-tls = [
    "reqwest/rustls-tls"
]