[package]
name = "dropbox"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.11.15", features = [ "json" ], default-features = false }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.40"

[dev-dependencies]
once_cell = "1.17.1"
tokio = { version = "1.26.0", features = [ "macros" ] }

[features]
default = [
    "native-tls"
]
native-tls = [
    "reqwest/native-tls"
]
rustls-tls = [
    "reqwest/rustls-tls"
]
